--- a/3week/MyApplication2/app/src/main/res/layout/main_image.xml
+++ b/3week/MyApplication2/app/src/main/res/layout/main_image.xml
@@ -7,5 +7,6 @@
     <ImageView
         android:id="@+id/mainImage"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="300dp"
+        android:src="@drawable/heart"/>
 </LinearLayout>
