--- a/5week/MyApplication3/app/src/main/res/layout/wrong_info.xml
+++ b/5week/MyApplication3/app/src/main/res/layout/wrong_info.xml
@@ -12,8 +12,7 @@
         <ImageView
             android:id="@+id/wrongImage"
             android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/heart" />
+            android:layout_height="150dp"/>
 
         <TextView
             android:layout_width="wrap_content"
